--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -22,7 +22,7 @@ a {
 }
 
 table {
- width: 500px;
+ width: 550px;
  border-collapse: collapse;
  overflow: hidden;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.0);
@@ -58,13 +58,12 @@ tbody {
 }
 
 .main-wrapper{
-  width: 100%;
+  max-width: 100%;
   display: grid;
-  grid-template-columns: minmax(0,1fr) minmax(0, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
-  min-width: 0;
-  min-height: 0;
 }
 @media screen and (max-width: 1000px) {
   .main-wrapper{
@@ -72,17 +71,59 @@ tbody {
   }
 }
 .summary-table {
-  display: flex;
   align-items: center;
   justify-content: center;
   padding: 2px;
   border: 1px solid grey;
   max-width:100vw;
-  box-sizing:border-box;; /* Don't forget this !*/
+  box-sizing:border-box;
+  grid-column-start: 1;
+  grid-column-end: 2;
 }
 
 .line-chart-container{
-  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box;
+  overflow: hidden;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.pie-chart-container{
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  overflow: hidden;
+  box-sizing:border-box;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.bar-chart-container{
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width: 100vw;
+  box-sizing:border-box;
+  overflow: hidden;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.worldmap-container{
   align-items: center;
   justify-content: center;
   padding: 2px;
@@ -91,40 +132,9 @@ tbody {
   box-sizing:border-box;
   overflow: hidden;
   grid-column-start: 1;
-  grid-column-end: 3;
-
-}
-
-.pie-chart-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-  border: 1px solid grey;
-  max-width:100vw;
-  box-sizing:border-box;
-}
-
-.bar-chart-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-  border: 1px solid grey;
-  max-width:100vw;
-  box-sizing:border-box;
-  overflow: hidden;
-}
-
-.worldmap-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-  border: 1px solid grey;
-  max-width:100vw;
-  box-sizing:border-box;
-  overflow: hidden;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
 
 .watchlist-name-title{
