--- a/Prescient/templates/base_layout.html
+++ b/Prescient/templates/base_layout.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='base_style.css') }}">
   <title>Prescient Finance</title>
 </head>
-<title>{% block title %}{% endblock %} - Prescient</title>
+<title>{% block title %}Prescient{% endblock %}</title>
 <body>
   <nav>
     <div class="breaks">
